 6. Better shuffle albums icon.
 7. Add swipe left/right on cover to change track.
 8. Re-factor language handling.
 9. Allow other LMS plugins to register Javascript and dialogs.
10. Optionally collapse discs of multi-disc albums - either always collapse, or
    when 200 or more tracks. Setting is controlled server-side.
11. Fix browser-context menu for text fields in browse list.

2.8.4
------
1. Remove hover from list in 'Synchronise' dialog to work-around item being
   selected after long-press of 'Manage players' in players menu.
2. Close players menu 3/4 of a second after long-press on 'Manage players'
   entry.
3. If set to show technical info then also append this to track details when
   using 'Copy details' action.
4. Add 'BBC Sounds' to sources mapping.
5. When checking if source is already in tech info, remove spaces from source.
6. Use different home icon if 'go home' just closes dialogs.
7. Try to work-around LMS returning incorrect queue size.
8. Make 'Source' entry in now-playing a link to online service's track, if
   possible.
9. Correctly handle LMS's new British English language setting.

2.8.3
-----
1. Update translations.
2. Add track source (Spotify, Qobuz, etc.) to technical info.
3. Slightly alter metrics of desktop layout toolbar to help on iPad. If iPad
   is not detected, or padding required elsewhere, add "?addpadd" to URL.
4. Catch exceptions when try to access localstorage.
5. Fix setting disc title from comment.
6. Move 'Stop button' config option into 'Now playing' section, as that is where
   it applies.
7. Set cursor for menu items.
8. Fix bottom toolbar button positions if stop button is shown.
9. Only open sync dialog on long-press of 'Manage players' menu entry.

2.8.2
-----
1. Only show multi-disc icon, and prompt for disc to use, etc., if LMS is set to
   group multi-disc albums.
2. Add add and play actions to subtoolbar for 'All songs' listings.
3. Don't show disc headers in 'All songs' listings.
4. Hide settings password.