@@ -519,6 +519,7 @@
 "User guide":"",
 "Various Artists":"",
 "Version":"",
+"Voltage: %1%":"",
 "Volume (%)":"",
 "Volume gain":"",
 "Volume step":"",
