@@ -585,6 +585,7 @@
 "1 day":"1 dag",
 "%1 days":"%1 dagen",
 "Reloading":"",
+"Voltage: %1%":"",
 "1 Disc":"",
 "%1 Discs":""
 }
