@@ -583,6 +583,7 @@
 "Swipe left and right (on cover in mobile layout) to change track.":"",
 "Swipe to change track":"",
 "Synchronised with other players.":"",
+"Voltage: %1%":"Напряжение: '%1'",
 "1 Disc":"",
 "%1 Discs":"",
 "1 Player":"",
