@@ -13,6 +13,7 @@
 10. Optionally collapse discs of multi-disc albums - either always collapse, or
     when 200 or more tracks. Setting is controlled server-side.
 11. Fix browser-context menu for text fields in browse list.
+12. Add player voltage to 'Information' dialog.
 
 2.8.4
 ------
